<package format="2">
	<name>cob_object_recording</name>
	<version>0.1.0</version>
	<description>

		handy tool to record image data from an object from euqally spaces views. For its usage it is necesarry to print out a mrker board, which is available from the cob_fiducials package in the cob_object_perception meta-package

	</description>
	<author>Richard Bormann</author>
	<maintainer email="jsf@ipa.fhg.de">Jan Fischer</maintainer>
	<license>LGPL</license>
	<url>http://ros.org/wiki/cob_object_recording</url>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>cmake_modules</depend>
	<depend>pcl_ros</depend>
	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>dynamic_reconfigure</depend>
	<depend>cv_bridge</depend>
	<depend>std_msgs</depend>
	<depend>std_srvs</depend>
	<depend>sensor_msgs</depend>
	<depend>message_filters</depend>
	<depend>image_transport</depend>
	<depend>visualization_msgs</depend>
	<depend>cob_object_detection_msgs</depend>

</package>


