<package format="2">
  <name>cob_read_text</name>
  <version>0.1.0</version>
  <description>

    Detects and recognizes text in natural images. 
    The system was trained for indoors household environment with Care-O-bot's stereo vision colour cameras.
    Text localisation and OCR occur separately and can be evaluated using precision, recall.

  </description>

  <author>Robert Heinze, Richard Bormann</author>
  <maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>

  <license>LGPL, Fraunhofer IPA</license>
  <url>http://ros.org/wiki/cob_read_text</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>boost</depend>
  <depend>cmake_modules</depend>
  <depend>cv_bridge</depend>
  <depend>eigen</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>libpcl-all-dev</depend>
  <depend>libvtk</depend>
  <depend>pcl_ros</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <!--exec_depend>cob_read_text_data</exec_depend>
  <exec_depend>cob_tesseract_data</exec_depend-->
  <exec_depend>image_view</exec_depend>
  
</package>


