<package>
  <name>cob_surface_classification</name>
  <version>0.1.0</version>
  <description>

     Image processing tool for the categorization of surface shapes.

  </description>
  <author email="richard.bormann@ipa.fraunhofer.de">Richard Bormann, Carolin Eckard</author>
  <maintainer email="jsf@ipa.fhg.de">Jan Fischer</maintainer>
  <license>LGPL</license>
  <url>http://ros.org/wiki/cob_surface_classification</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libopencv-dev</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>cob_3d_mapping_common</build_depend>
  <build_depend>cob_3d_segmentation</build_depend>
  <build_depend>cob_3d_features</build_depend>
  <build_depend>cob_object_detection_msgs</build_depend>
  <build_depend>libvtk</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>libopencv-dev</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>cob_3d_mapping_common</run_depend>
  <run_depend>cob_3d_segmentation</run_depend>
  <run_depend>cob_3d_features</run_depend>
  <run_depend>cob_object_detection_msgs</run_depend>
  <run_depend>libvtk</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

</package>
